--- a/quizTask.html
+++ b/quizTask.html
@@ -28,7 +28,7 @@
     <div class='row' id="init-section">
         <div class="instructions">
            Instructions
-        <div class="submit-button">
+        <div class="start-button">
             <button type="button" class="btn btn-default" id="start-button">START TEST</button>
         </div>
         </div>
@@ -39,8 +39,11 @@
             <div class="answers"></div>
             <div> <span class="btn btn-primary next-question" id="next-button">NEXT</span>
             <span class="btn-primary btn" id="back-button">BACK</span>
-                <span class="btn-primary btn" id="submit-button">SUBMIT</span>
                 </div>
+            <div>
+                <span class="btn-primary btn submit-button" id="submit-button">SUBMIT</span>
+
+            </div>
         </div>
     </div>
 </div>
